plugins {
    id 'java'
}

group = 'gg.modl'
version = '1.0.1'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
    maven { url = 'https://repo.grim.ac/snapshots' }
    maven { url = 'https://repo.polar.top/repository/polar/' }
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    compileOnly 'org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT'
    compileOnly 'ac.grim.grimac:GrimAPI:1.0.0'
    compileOnly 'top.polar:api:2.3.0'
    compileOnly 'io.netty:netty-all:4.1.97.Final' // Provided by Minecraft server at runtime
    compileOnly 'net.kyori:adventure-api:4.26.1'
    compileOnly 'net.kyori:adventure-text-minimessage:4.26.1'
    compileOnly 'net.kyori:adventure-text-serializer-legacy:4.26.1'
    compileOnly 'net.kyori:adventure-text-serializer-gson:4.26.1'
}
